第一次成功执行,普天同庆

--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -134,9 +134,9 @@
     <EmbeddedResource Include="Services\AppendInstall\InstallSteps.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resource\config\client.config">
+    <EmbeddedResource Include="Resource\config\client.config">
       <SubType>Designer</SubType>
-    </None>
+    </EmbeddedResource>
     <None Include="Resource\WebFile\Tools\7zip\7zSD.sfx" />
   </ItemGroup>
   <ItemGroup>
