去掉那么多坑爹的子命名空间

--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -71,14 +71,13 @@
     <Compile Include="Core\Module.cs" />
     <Compile Include="Core\LicensesInformation.cs" />
     <Compile Include="Core\ServiceInformation.cs" />
-    <Compile Include="Plugin\ConfigManager\ServiceInformationCreator.cs" />
+    <Compile Include="Plugin\ServiceInformationCreator.cs" />
     <Compile Include="Plugin\DbManager\dbConnectionFactory.cs" />
     <Compile Include="Plugin\DbManager\SQLExecute.cs" />
     <Compile Include="Plugin\DbManager\SQLMapFactory.cs" />
-    <Compile Include="Plugin\FileOperation\DataStructureItem.cs" />
-    <Compile Include="Plugin\FileOperation\DataStructuresGetter.cs" />
-    <Compile Include="Plugin\FileOperation\FileOperation.cs" />
-    <Compile Include="Plugin\i18n\i18n.cs" />
+    <Compile Include="Plugin\DbManager\DataStructureItem.cs" />
+    <Compile Include="Plugin\DbManager\DataStructuresGetter.cs" />
+    <Compile Include="Plugin\FileOperation.cs" />
     <Compile Include="Plugin\IISManager\CheckOSBitness.cs" />
     <Compile Include="Plugin\IISManager\CheckOSInfo.cs" />
     <Compile Include="Plugin\IISManager\IIISManager.cs" />
