--- a/Install4ibas/Install4ibas.x86.csproj
+++ b/Install4ibas/Install4ibas.x86.csproj
@@ -102,23 +102,15 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>cd "$(TargetDir)"
-del /q "setup.exe"
-if exist "..\..\..\Install4ibas.Tools\Dlls\Microsoft.Web.Administration.dll" (
-copy /y "..\..\..\Install4ibas.Tools\Dlls\Microsoft.Web.Administration.dll" Microsoft.Web.Administration.dll
-) else (print "no Microsoft.Web.Administration.dll")
 if exist "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip" (
-copy /y "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7zSD.sfx" 7zSD.sfx
-copy /y "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\Config.txt" Config.txt
-"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.7z -r Install4ibas.exe *.dll SQLMaps.xml ibasStandardModules.xml
-copy /b 7zSD.sfx + config.txt + setup.7z "setup.exe"
-del /q "7zSD.sfx"
-del /q "Config.txt"
-del /q "setup.7z"
+"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.x86.7z -r Install4ibas.exe *.dll SQLMaps.xml ibasStandardModules.xml
+copy /b Install4ibas.sfx + Install4ibas.config.txt + setup.x86.7z "setup.x86.exe"
 ) else (print "no packager")
+
 cd "$(TargetDir)"
 if not exist ..\..\..\Release MD ..\..\..\Release
 cd "$(TargetDir)"
-copy /y "setup.exe" ..\..\..\Release</PostBuildEvent>
+copy /y "setup.x86.exe" ..\..\..\Release</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
