日志消息处理

--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Core\LicensesInformation.cs" />
     <Compile Include="Core\ServiceInformation.cs" />
     <Compile Include="Plugin\MessageManager.cs" />
+    <Compile Include="Plugin\Messages\FileMessageRecorder.cs" />
+    <Compile Include="Plugin\Messages\Message.cs" />
     <Compile Include="Plugin\ServiceInformationCreator.cs" />
     <Compile Include="Plugin\DbManager\dbConnectionFactory.cs" />
     <Compile Include="Plugin\DbManager\SQLExecute.cs" />
