--- a/Install4ibas.Tools/Install4ibas.Tools.csproj
+++ b/Install4ibas.Tools/Install4ibas.Tools.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\ComputerCode.cs" />
     <Compile Include="Core\Module.cs" />
     <Compile Include="Core\LicensesInformation.cs" />
     <Compile Include="Core\ServiceInformation.cs" />
