--- a/Install4ibas.UnitTest/Install4ibas.UnitTest.csproj
+++ b/Install4ibas.UnitTest/Install4ibas.UnitTest.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
