--- a/Install4ibas/Install4ibas.x86.csproj
+++ b/Install4ibas/Install4ibas.x86.csproj
@@ -110,7 +110,7 @@
     <PostBuildEvent>cd "$(TargetDir)"
 if exist "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip" (
 copy Install4ibas.x86.exe Install4ibas.exe
-"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.x86.7z -r Install4ibas.exe *.dll SQLMaps.xml ibasStandardModules.xml
+"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.x86.7z -r Install4ibas.exe Install4IIS.exe *.dll SQLMaps.xml ibasStandardModules.xml
 copy /b Install4ibas.sfx + Install4ibas.config.txt + setup.x86.7z "setup.x86.exe"
 del Install4ibas.exe
 del setup.x86.7z
