--- a/Install4IIS/Install4IIS.csproj
+++ b/Install4IIS/Install4IIS.csproj
@@ -58,8 +58,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>cd $(ProjectDir)
+
+copy /y $(OutDir)Install4IIS.exe ..\Install4ibas\$(OutDir)Install4IIS.exe
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
