--- a/Install4ibas/Install4ibas.x86.csproj
+++ b/Install4ibas/Install4ibas.x86.csproj
@@ -108,20 +108,31 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>cd "$(TargetDir)"
+if not exist .\~packages MD .\~packages
 if exist "..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip" (
 copy Install4ibas.x86.exe Install4ibas.exe
-"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.x86.7z -r Install4ibas.exe Install4IIS.exe *.dll SQLMaps.xml ibasStandardModules.xml
-copy /b Install4ibas.sfx + Install4ibas.config.txt + setup.x86.7z "setup.x86.exe"
-del Install4ibas.exe
+reg 打包带模块的
+"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.x86.7z -r Install4ibas.exe ~packages Install4IIS.exe *.dll SQLMaps.xml ibasStandardModules.xml
+copy /b Install4ibas.sfx + Install4ibas.config.txt + setup.x86.7z "setup.x86(包含标准模块).exe"
 del setup.x86.7z
+
+reg 打包不带带模块的
+"..\..\..\Install4ibas.Tools\Resource\WebFile\Tools\7zip\7z.exe" a setup.x86.7z -r Install4ibas.exe Install4IIS.exe *.dll SQLMaps.xml ibasStandardModules.xml
+copy /b Install4ibas.sfx + Install4ibas.config.txt + setup.x86.7z "setup.x86(不包含标准模块).exe"
+del setup.x86.7z
+
+reg 删除残留文件
+del Install4ibas.exe
 del Install4ibas.sfx
 del Install4ibas.config.txt
+
 ) else (print "no packager")
 
 cd "$(TargetDir)"
 if not exist ..\..\..\Release MD ..\..\..\Release
 cd "$(TargetDir)"
-copy /y "setup.x86.exe" ..\..\..\Release</PostBuildEvent>
+copy /y "setup.x86(包含标准模块).exe" ..\..\..\Release
+copy /y "setup.x86(不包含标准模块).exe" ..\..\..\Release</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
